# StyleSync

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements-backend.txt  requirements-ml.txt  requirements.txt
artifacts/faiss/: item_ids.npy
artifacts/model/user_tower/: fingerprint.pb  saved_model.pb
artifacts/model/user_tower/variables/: variables.index
data/hm/: sample_users.txt
scripts/: benchmark_retrieval.py  build_faiss.py  embed_images_resnet50.py  export_embeddings.py  query_faiss.py  train_retrieval.py
src/fashion_recsys.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fashion_recsys/data/: __init__.py  hm.py
src/fashion_recsys/models/: __init__.py  two_tower.py
src/fashion_recsys/utils/: __init__.py  embedding_export.py  faiss_index.py
src/frontend/: app.py
src/serving/: main.py
